--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Kyle Eggleton
+name: Jumping from trees
 
 # Short bio or description (displayed in the header)
-description: Jumping from trees
+description: Personal webpage of Kyle Eggleton
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://eggleton.co.nz.public.s3-ap-southeast-2.amazonaws.com/Kyle_avatar.png
 
 #
 # Flags below are optional
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: kseggleton
   instagram:
-  linkedin:
+  linkedin: kyle-eggleton-59745174
   pinterest:
   rss: 1# just type anything here for a working RSS icon
   twitter: kseggleton
