removed LinkedIn link

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: kseggleton
   instagram:
-  linkedin: kyle-eggleton-59745174
+  linkedin:
   pinterest:
   rss: 1# just type anything here for a working RSS icon
   twitter: kseggleton
