--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,10 @@ avatar: http://eggleton.co.nz.public.s3-ap-southeast-2.amazonaws.com/Kyle_avatar
 # Flags below are optional
 #
 
+# Collections (see https://jekyllrb.com/docs/collections/)
+collections:
+- geekposts
+
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
