--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ name: Jumping from trees
 description: Personal webpage of Kyle Eggleton
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://eggleton.co.nz.public.s3-ap-southeast-2.amazonaws.com/Kyle_avatar.png
+# avatar: http://eggleton.co.nz.public.s3-ap-southeast-2.amazonaws.com/Kyle_avatar.png
+avatar: http://eggleton.co.nz.public.s3-ap-southeast-2.amazonaws.com/jumpingtree.png
 
 #
 # Flags below are optional
