--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: Personal webpage of Kyle Eggleton
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 # avatar: http://eggleton.co.nz.public.s3-ap-southeast-2.amazonaws.com/Kyle_avatar.png
-avatar: http://eggleton.co.nz.public.s3-ap-southeast-2.amazonaws.com/jumpingtree.png
+avatar: https://www.dropbox.com/scl/fi/771yc9ofdvuwdbalafdwj/tree-blog.png?rlkey=fq7ltutp9ta05ww2bfzrwj2hu&dl=0
 
 #
 # Flags below are optional
@@ -32,7 +32,7 @@ footer-links:
   linkedin:
   pinterest:
   rss: 1# just type anything here for a working RSS icon
-  twitter: kseggleton
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
