--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: Personal webpage of Kyle Eggleton
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 # avatar: http://eggleton.co.nz.public.s3-ap-southeast-2.amazonaws.com/Kyle_avatar.png
-avatar: https://www.dropbox.com/scl/fi/771yc9ofdvuwdbalafdwj/tree-blog.png?rlkey=fq7ltutp9ta05ww2bfzrwj2hu&dl=0
+avatar: https://github.com/kseggleton/kseggleton.github.io/blob/master/images/tree-blog.png
 
 #
 # Flags below are optional
